correct button and z-index for overlay

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -89,7 +89,7 @@ body {
 	opacity: 0;
 
 	&--active {
-		z-index: 1;
+		z-index: 2;
 		opacity: 0.7;
 	}
 }
